k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plutus-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: plutus-api
  template:
    metadata:
      labels:
        app: plutus-api
    spec:
      containers:
      - name: plutus-api
        imagePullPolicy: Always
        image: isanjay112/plutusapi:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
