k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      volumes:
      - name: database-storage
        persistentVolumeClaim:
          claimName: database-persistant-volume-claim
      containers:
      - name: database
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: database-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
