k8s/api-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: plutus-api
  ports:
  - port: 5000
    targetPort: 5000
