k8s/database-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: database-clusterip-service
  ports:
  - port: 5432
    targetPort: 5432
